# tcs-transformer

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.json  transform_config.json
docs/: HYBRID_MODEL.md  HYBRID_MODEL_ISSUES.md  QUICK_START.md  TCS_VAE_ARCHITECTURE.md  TRANSFORMER_TCS.md
examples/dummy_data/: 0_00000.json
examples/dummy_data/info/: idx2file_path.json  pred2cnt.txt
examples/dummy_data/transformed/TCS_f0-lgF-PAS-Gen_dummy/: _transformed_0.json
examples/dummy_data/transformed/TCS_f0-lgF-PAS-Gen_dummy/info/: content_pred2cnt.txt  content_predarg2cnt.txt  content_predarg2ix.txt  corpus_stats_filt.txt  err2cnt.txt  pred2ix.txt  pred_func2cnt.txt  pred_func2ix.txt
examples/erg/: unk2pos.json
examples/eval_data_sets/RELPRON/: word2pred_premap.json  word2pred_premap_old.json
tcs_transformer/core/: base_data_loader.py  base_trainer.py  tcs_transform.py  trainer.py
tcs_transformer/data/: __init__.py  collators.py  data_loaders.py  dataset.py  function.py  main.py
tcs_transformer/evaluator/: evaluator.py
tcs_transformer/logger/: logger.py
tcs_transformer/models/: __init__.py  hybrid_model.py  tcs_model.py  tcs_transformer_model.py  transformer_model.py
tcs_transformer/scripts/: __init__.py  train_hybrid.py  train_tcs_transformer.py
tcs_transformer/scripts/tcs_scripts/: generate_dummy_data.py  prepare_train.py  train.py
tcs_transformer/scripts/transformer_scripts/: __init__.py  train_transformer.py
tcs_transformer/utils/: __init__.py  common.py  dg_util.py  parse_config.py  token_to_tcs.py  util.py
